fix large text contrast accessibility

--- a/src/_includes/styles.css
+++ b/src/_includes/styles.css
@@ -190,5 +190,5 @@ footer a svg {
 .text-large {
     font-size: 1.3em;
     font-weight: bold;
-    color: hsl(198, 80%, 49%);
+    color: hsl(198, 80%, 47%);
 }
